--- a/src/wire/CMakeLists.txt
+++ b/src/wire/CMakeLists.txt
@@ -26,12 +26,12 @@
 # STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
 # THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-set(monero-lws-wire_sources basic_value.cpp error.cpp read.cpp write.cpp)
-set(monero-lws-wire_headers basic_value.h error.h field.h filters.h fwd.h json.h read.h traits.h vector.h write.h)
+set(lwsf-wire_sources basic_value.cpp error.cpp read.cpp write.cpp)
+set(lwsf-wire_headers basic_value.h error.h field.h filters.h fwd.h json.h read.h traits.h vector.h write.h)
 
-add_library(monero-lws-wire ${monero-lws-wire_sources} ${monero-lws-wire_headers})
-target_include_directories(monero-lws-wire PUBLIC "${LMDB_INCLUDE}")
-target_link_libraries(monero-lws-wire PRIVATE monero::libraries)
+add_library(lwsf-wire ${lwsf-wire_sources} ${lwsf-wire_headers})
+target_include_directories(lwsf-wire PUBLIC "${LMDB_INCLUDE}")
+target_link_libraries(lwsf-wire PRIVATE monero::libraries)
 
 add_subdirectory(json)
 add_subdirectory(msgpack)
