--- a/src/wire/msgpack/CMakeLists.txt
+++ b/src/wire/msgpack/CMakeLists.txt
@@ -26,8 +26,8 @@
 # STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
 # THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-set(monero-lws_wire-msgpack_sources error.cpp read.cpp write.cpp)
-set(monero-lws_wire-msgpack_headers base.h error.h fwd.h read.h write.h)
+set(lwsf_wire-msgpack_sources error.cpp read.cpp write.cpp)
+set(lwsf_wire-msgpack_headers base.h error.h fwd.h read.h write.h)
 
-add_library(monero-lws-wire-msgpack ${monero-lws_wire-msgpack_sources} ${monero-lws-wire-msgpack_headers})
-target_link_libraries(monero-lws-wire-msgpack  monero::libraries monero-lws-wire)
+add_library(lwsf-wire-msgpack ${lwsf_wire-msgpack_sources} ${lwsf-wire-msgpack_headers})
+target_link_libraries(lwsf-wire-msgpack  monero::libraries lwsf-wire)
