Add support for storing pending txes to file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,7 @@ set(lwsf_sources
   subaddress_minor.cpp
   transaction_history.cpp
   transaction_info.cpp
+  utils/encrypted_file.cpp
   wallet.cpp
   wallet_manager.cpp
 )
@@ -50,6 +51,8 @@ set(lwsf_headers
   rpc.h
   transaction_history.h
   transaction_info.h
+  utils/encrypted_file.h
+  utils/numeric.h
   wallet.h
 )
 
