Add EXLUDE_FROM_ALL from monero source to speed up builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ if (NOT MONERO_SOURCE_DIR)
 endif()
 
 include(FetchContent)
-FetchContent_Declare(monero SOURCE_DIR ${MONERO_SOURCE_DIR})
+FetchContent_Declare(monero SOURCE_DIR ${MONERO_SOURCE_DIR} EXCLUDE_FROM_ALL)
 
 if (NOT monero_POPULATED)
   FetchContent_MakeAvailable(monero)
